--- a/SQL/projet/templates/recherche.html
+++ b/SQL/projet/templates/recherche.html
@@ -66,10 +66,10 @@
 	</li>
 	<li>
 		<label for="demo">Démonétisée:</label>
-		<input type="radio" id="pc" name="demo" maxlength = "3" value="oui"/>
-			<label for="demo">Oui</label>
-		<input type="radio" id="pc" name="demo" maxlength = "3" value="non"/>
-			<label for="demo">Non</label>
+		<input type="radio" id="oui" name="demo" value="oui" checked/>
+			<label for="oui">Oui</label>
+		<input type="radio" id="non" name="demo" value="non" checked/>
+			<label for="non">Non</label>
 	</li>
 	<li>
 		<label for="idr">Indice de rareté:</label>
