--- a/SQL/projet/templates/resultats.html
+++ b/SQL/projet/templates/resultats.html
@@ -11,6 +11,8 @@
 	Elle est composé de {{ comp }}, pèse {{ pd }}g, est de forme {{ forme }}, 
 	avec {{ ep }}mm d'épaisseur et {{ diam }}mm de diamètre.
 	demonétisé : {{ demo }} et possède un indice de rareté numista de {{ idr }}	
+	
+	{{ rep[0] }}
 	</p>
 
 <footer> Les résultats ne vous satifaissent pas ?
