--- a/SQL/projet/templates/recherche.html
+++ b/SQL/projet/templates/recherche.html
@@ -21,12 +21,12 @@
 	
 	<li>
 		<label for="nb_ex">Nombre d'exemplaire:</label>
-		<input type="number" id="pc" name = "nb_ex" min="1" max="100" value="1"/>
+		<input type="number" id="pc" name = "nb_ex" min="1" max="100" />
 	</li>
 	
 	<li>
 		<label for="emet">Emetteur:</label>
-		<input type="text" id="pc" name="emet" value="france"/>
+		<input type="text" id="pc" name="emet" />
 	</li>
 	
 	<li>
@@ -37,32 +37,32 @@
 		</select>
 	</li>
 	<li>
-		<label for="date">Date:</label> <! attention date a revoir >
-		<input type="number" id="pc" name="date" min="1642" max="2024" value="1642" />
+		<label for="date">Date:</label>
+		<input type="number" id="pc" name="date" min="1642" max="2024" />
 	</li>
 	<li>
 		<label for="dev">Devise:</label>
-		<input type="text" id="pc" name="dev" value="francs"/>
+		<input type="text" id="pc" name="dev" />
 	</li>
 	<li>
 		<label for="comp">Composition:</label>
-		<input type="text" id="pc" name="comp" value="nickel" />
+		<input type="text" id="pc" name="comp" />
 	</li>
 	<li>
 		<label for="pd">Poids (g):</label>
-		<input type="number" id="pc" name="pd" step="0.01" min="0" max="100" value="1"/>
+		<input type="number" id="pc" name="pd" step="0.01" min="0" max="100"/>
 	</li>
 	<li>
 		<label for="diam">Diamètre (mm) :</label>
-		<input type="number" id="pc" name="diam" step="0.01" min="0" max="100" value="1" />
+		<input type="number" id="pc" name="diam" step="0.01" min="0" max="100"/>
 	</li>
 	<li>
 		<label for="ep">Épaisseur (mm):</label>
-		<input type="number" id="pc" name="ep" step="0.01" min="0" max="100" value="1" />
+		<input type="number" id="pc" name="ep" step="0.01" min="0" max="100" />
 	</li>
 	<li>
 		<label for="forme">Forme:</label>
-		<input type="text" id="pc" name="forme" value="ronde" />
+		<input type="text" id="pc" name="forme" />
 	</li>
 	<li>
 		<label for="demo">Démonétisée:</label>
@@ -73,7 +73,7 @@
 	</li>
 	<li>
 		<label for="idr">Indice de rareté:</label>
-		<input type="number" id="pc" name="idr" min="0" max="100" value="1"/>
+		<input type="number" id="pc" name="idr" min="0" max="100" />
 	</li>
 	<input type="submit" value="Aller à la page">
 	</form>
