--- a/SQL/projet/templates/recherche.html
+++ b/SQL/projet/templates/recherche.html
@@ -8,16 +8,13 @@
 <h1>Les pièces de Dreo.</h1>
 <p> Bonjour, vous êtes sur le site catalogant mes pièces de tous types. </p>
 
-<!--
-<form action="{{ url_for('resultats') }}" method="post">
-	<label for="nom">Quelle pièce voulez-vous voir ?</label>
-	<input type="text" id="name" name="nom" required />
-	<input type="submit" value="Aller à la page">
-</form>
--->
 
-<label for="nom">Quelle pièce voulez-vous voir ?</label>
-<input type="text" id="name" name="nom" required />
+<form action="{{ url_for('resultats') }}" method="post">
+	<input placeholder="Quelle pièce voulez-vous voir ?" id="name" name="nom">
+	<input type="submit" value="Aller à la page">
+	
+	
+</form>
 
 <h3>Recherche spécifique: </h3>
 <ul>
