--- a/SQL/projet/templates/resultats.html
+++ b/SQL/projet/templates/resultats.html
@@ -5,15 +5,23 @@
 {% block title %}resultats{% endblock %}
 
 {% block content %}
+
+
 <h1>Voici le résultat de votre recherche: </h1>
-	<p>Voici un {{repetition[1]}}, je l'ai en {{repetition[2]}} fois. Elle est du type {{repetition[4]}} et son pays émetteur est : {{repetition[3]}}.
-	Crée en {{repetition[5]}} sa devise est :{{repetition[6]}} et sa composition est :{{repetition[7]}}.
-	Elle pèse {{repetition[8]}}, fait {{repetition[10]}} d'épaisseur, est de forme {{repetition[11]}} et {{repetition[9]}} de diamètre.
-	Cette pièce est demonétisé : {{repetition[12]}} et possède un indice de rareté numista de {{repetition[13]}}
 	
-	<img src="{{repetition[14]}}">
-	<img src="{{repetition[15]}}">
+
+{% for result in repetition %}
+	<p>Voici un {{result[1]}}, je l'ai en {{result[2]}} fois. Elle est du type {{result[4]}} et son pays émetteur est : {{result[3]}}.
+	Crée en {{result[5]}} sa devise est :{{result[6]}} et sa composition est :{{result[7]}}.
+	Elle pèse {{result[8]}}, fait {{result[10]}} d'épaisseur, est de forme {{result[11]}} et {{result[9]}} de diamètre.
+	Cette pièce est demonétisé : {{result[12]}} et possède un indice de rareté numista de {{result[13]}}
+	
+	<img src="{{result[14]}}">
+	<img src="{{result[15]}}">
 	</p>
+	
+
+{% endfor %}
 
 <footer> Les résultats ne vous satifaissent pas ?
 <a href="http://127.0.0.1:5000"> Recommencez alors !</a></footer>
