--- a/SQL/projet/templates/resultats.html
+++ b/SQL/projet/templates/resultats.html
@@ -23,5 +23,5 @@
 {% endfor %}
 
 <footer> Les résultats ne vous satifaissent pas ?
-<a href="http://127.0.0.1:5000"> Recommencez alors !</a></footer>
+<a href="{{ url_for('recherche') }}"> Recommencez alors !</a></footer>
 {% endblock %}
