--- a/SQL/projet/templates/pieceotheque.html
+++ b/SQL/projet/templates/pieceotheque.html
@@ -2,16 +2,16 @@
 
 {% extends 'base.html' %}
 
-{% block title %}Hello{% endblock %}
+{% block title %}Pieceotheque{% endblock %}
 
 {% block content %}
+<p>{{ repetition }}</p>
 
-{% for result in repetition %}
-	<img src="{{result[14]}}">
-	<img src="{{result[15]}}">
+	<img src="{{repetition[0]}}">
+	<img src="{{repetition[1]}}">
 
-{% endfor %}
 
-<a href="http://127.0.0.1:5000"> Recommencer</a></footer>
+
+<a href="{{ url_for('recherche') }}"> Recommencer</a></footer>
 
 {% endblock %}
