projet + création page piece
problème id

--- a/SQL/projet/templates/pieceotheque.html
+++ b/SQL/projet/templates/pieceotheque.html
@@ -5,12 +5,11 @@
 {% block title %}Pieceotheque{% endblock %}
 
 {% block content %}
-<p>{{ repetition }}</p>
+{% for result in repetition %}
+	<img src="{{result[0]}}">
+	<img src="{{result[1]}}">
 
-	<img src="{{repetition[0]}}">
-	<img src="{{repetition[1]}}">
-
-
+{% endfor %}
 
 <a href="{{ url_for('recherche') }}"> Recommencer</a></footer>
 
