--- a/SQL/projet/templates/piece.html
+++ b/SQL/projet/templates/piece.html
@@ -8,7 +8,8 @@
 
 {% for result in repetition %}
 
-<p>Voici un {{result[1]}}, je l'ai en {{result[2]}} fois. Elle est du type {{result[4]}} et son pays émetteur est : {{result[3]}}.
+<p>
+Voici un {{result[1]}}, je l'ai en {{result[2]}} fois. Elle est du type {{result[4]}} et son pays émetteur est : {{result[3]}}.
 Crée en {{result[5]}} sa devise est :{{result[6]}} et sa composition est :{{result[7]}}.
 Elle pèse {{result[8]}}, fait {{result[10]}} d'épaisseur, est de forme {{result[11]}} et {{result[9]}} de diamètre.
 Cette pièce est demonétisé : {{result[12]}} et possède un indice de rareté numista de {{result[13]}}
@@ -19,5 +20,10 @@ Cette pièce est demonétisé : {{result[12]}} et possède un indice de rareté 
 	
 
 {% endfor %}
+
+<footer>
+	Les résultats ne vous satifaissent pas ?
+	<a href="{{ url_for('recherche') }}"> Recommencez alors !</a>
+</footer>
 
 {% endblock %}
