--- a/SQL/projet/templates/recherche.html
+++ b/SQL/projet/templates/recherche.html
@@ -27,7 +27,7 @@
 	<li>
 		<label for="type">Type:</label>
 		<select name="typ" id="pc">
-				<option > </option>
+				<option > </option> <!-- option vide pour quand la personne ne sais pas-->
 				<option value="Pièce courante"> Pièce courante</option>
                 <option value="Essaie"> Essaie</option>
 			
@@ -35,7 +35,7 @@
 	</li>
 	<li>
 		<label for="date">Date:</label>
-		<input type="number" id="pc" name="date" min="1642" max="2024" />
+		<input type="number" id="pc" name="date"/>
 	</li>
 	<li>
 		<label for="dev">Devise:</label>
@@ -87,9 +87,11 @@
 {% for result in repetition %}
 
    <a href="{{ url_for('piece', idP=result[0]) }}">
-	<img src="{{ result[1] }}" alt="Avers">
+	<img class="piece" src="{{ result[1] }}" alt="Avers">
    </a>
    
 {% endfor %}
+
+<script type="text/javascript" src="{{url_for('static', filename='script.jv')}}"> </script>
 
 {% endblock %}
