--- a/SQL/projet/templates/resultats.html
+++ b/SQL/projet/templates/resultats.html
@@ -11,8 +11,8 @@
 
 {% for result in repetition %}
 
-	<a href="{{ url_for('piece', idP=result[0]) }}"> <img src="{{result[14]}}"> </a>
-	<a href="{{ url_for('piece', idP=result[0]) }}"> <img src="{{result[15]}}"> </a>	
+	<a href="{{ url_for('piece', idP=result[0]) }}"> <img class="piece" src="{{result[14]}}"> </a>
+	<a href="{{ url_for('piece', idP=result[0]) }}"> <img class="piece" src="{{result[15]}}"> </a>	
 
 {% endfor %}
 
