--- a/SQL/projet/templates/recherche.html
+++ b/SQL/projet/templates/recherche.html
@@ -79,7 +79,7 @@
 	</form>
 </ul>
 
-<form action="{{ url_for('pieceothequeQ') }}" method="post">
+<form action="{{ url_for('pieceotheque') }}" method="post">
 <input type="submit" value="toutes les pièces">
 </form>
 
