--- a/SQL/projet/templates/pieceotheque.html
+++ b/SQL/projet/templates/pieceotheque.html
@@ -6,7 +6,6 @@
 
 {% block content %}
 
-<ul>
 	<li>	
 		<form action="{{ url_for('tri_nombre') }}" method="post">
 			<input type="submit" value="trier par nombre" name="tri_nb">
@@ -24,7 +23,18 @@
 			<input type="submit" value="trier par date" name="tri_date">
 		</form>
 	</li>
-</ul>
+	
+	<li>	
+		<form action="{{ url_for('tri_composition') }}" method="post">
+			<input type="submit" value="trier par composition" name="tri_comp">
+		</form>
+	</li>
+	
+	<li>	
+		<form action="{{ url_for('tri_poids') }}" method="post">
+			<input type="submit" value="trier par poids" name="tri_pds">
+		</form>
+	</li>
 
 
 {% for result in repetition %}
