--- a/SQL/projet/templates/recherche.html
+++ b/SQL/projet/templates/recherche.html
@@ -18,12 +18,10 @@
 		<label for="nb_ex">Nombre d'exemplaire:</label>
 		<input type="number" id="pc" name = "nb_ex" min="1" max="100" />
 	</li>
-	
 	<li>
 		<label for="emet">Emetteur:</label>
 		<input type="text" id="pc" name="emet" />
 	</li>
-	
 	<li>
 		<label for="type">Type:</label>
 		<select name="typ" id="pc">
@@ -46,12 +44,12 @@
 		<input type="text" id="pc" name="comp" />
 	</li>
 	<li>
-		<label for="pd">Poids (g):</label>
-		<input type="number" id="pc" name="pd" step="0.01" min="0" max="100"/>
+		<label for="pds">Poids (g):</label>
+		<input type="number" id="pc" name="pds" step="0.01" min="0" max="100"/>
 	</li>
 	<li>
-		<label for="diam">Diamètre (mm) :</label>
-		<input type="number" id="pc" name="diam" step="0.01" min="0" max="100"/>
+		<label for="dim">Dimension (mm) :</label>
+		<input type="number" id="pc" name="dim" step="0.01" min="0" max="100"/>
 	</li>
 	<li>
 		<label for="ep">Épaisseur (mm):</label>
@@ -69,27 +67,29 @@
 			<label for="non">Non</label>
 		<input type="radio" id="nsp" name="demo" value=""  checked/>
 			<label for="nsp">Ne sais pas</label>
-		
 	</li>
 	<li>
 		<label for="idr">Indice de rareté:</label>
 		<input type="number" id="pc" name="idr" min="0" max="100" />
 	</li>
+	
 	<input type="submit" value="Aller à la page">
 	</form>
 </ul>
 
+
+
 <form action="{{ url_for('pieceotheque') }}" method="post">
-<input type="submit" value="toutes les pièces">
+	<input type="submit" value="toutes les pièces">
 </form>
 
 
 {% for result in repetition %}
-
+<div>
    <a href="{{ url_for('piece', idP=result[0]) }}">
 	<img class="piece" src="{{ result[1] }}" alt="Avers">
    </a>
-   
+</div>
 {% endfor %}
 
 
