--- a/SQL/projet/templates/tri_date.html
+++ b/SQL/projet/templates/tri_date.html
@@ -8,6 +8,7 @@
 
 
 {% for result in repetition %}
+<p> {{result[5]}} </p>
 <a href="{{ url_for('piece', idP=result[0]) }}">
 	<img class="piece" src="{{result[14]}}">
 	<img class="piece" src="{{result[15]}}">
