--- a/SQL/projet/templates/tri_emetteur.html
+++ b/SQL/projet/templates/tri_emetteur.html
@@ -7,11 +7,11 @@
 {% block content %}
 
 {% for result in repetition %}
-
-<a href="{{ url_for('piece', idP=result[0]) }}">
-	<img class="piece" src="{{result[14]}}">
-	<img class="piece" src="{{result[15]}}">
-</a>
+<p> {{result[3]}} </p>
+	<a href="{{ url_for('piece', idP=result[0]) }}">
+		<img class="piece" src="{{result[14]}}">
+		<img class="piece" src="{{result[15]}}">
+	</a>
 {% endfor %}
 
 <a href="{{ url_for('pieceotheque') }}"> Retour</a>
