--- a/SQL/projet/templates/tri_nombre.html
+++ b/SQL/projet/templates/tri_nombre.html
@@ -7,7 +7,7 @@
 {% block content %}
 
 {% for result in repetition %}
-
+<p> {{result[2]}} </p>
 	<a href="{{ url_for('piece', idP=result[0]) }}">
 		<img class="piece" src="{{result[14]}}">
 		<img class="piece" src="{{result[15]}}">
