tri asc mais pas tri desc

--- a/SQL/projet/templates/piece.html
+++ b/SQL/projet/templates/piece.html
@@ -14,14 +14,14 @@
 		<li>Nom: {{result[1]}}</li>
 		<li>Nombre que je possède: {{result[2]}}</li>
 		<li>De type: {{result[4]}}</li>
-		<li>Pays émetteur est: {{result[3]}}</li>
+		<li>Pays émetteur: {{result[3]}}</li>
 		<li>Date de création: {{result[5]}}</li>
 		<li>Devise monétaire: {{result[6]}}</li>
 		<li>Composition: {{result[7]}}</li>
-		<li>Elle pèse: {{result[8]}}</li>
-		<li>Son épaisseur: {{result[10]}}</li>
-		<li>Sa forme est: {{result[11]}}</li>
-		<li>Sa dimension est: {{result[9]}}</li>
+		<li>Son poids (en gramme): {{result[8]}}</li>
+		<li>Son épaisseur (en mm): {{result[10]}}</li>
+		<li>Sa forme: {{result[11]}}</li>
+		<li>Sa dimension (en mm): {{result[9]}}</li>
 		<li>Démonétisation: {{result[12]}}</li>
 		<li>Indice de rareté numista: {{result[13]}}</li>
 	</ul>
