essaie bouton tri

--- a/SQL/projet/templates/pieceotheque.html
+++ b/SQL/projet/templates/pieceotheque.html
@@ -5,10 +5,21 @@
 {% block title %}Pieceotheque{% endblock %}
 
 {% block content %}
+<form>
+  <input
+    type="checkbox"
+    id="maCaseACocher"
+    onmouseover="maFonction()"
+    onclick="console.log('un évènement click a eu lieu')" />
+</form>
 
-	<input type="radio" onclick="inversement()" value="trier par descendant" name="tri" value="descendant" checked="">
+
+
+
+
+	<input type="radio" onclick="document.location.href.inversement()" class="btn" value="trier par descendant" name="tri" value="descendant" checked="">
 		<label for="tri_dsc">Descendant</label>
-	<input type="radio" onclick="inversement()" value="trier par ascendant" name="tri" value="ascendant" checked="">
+	<input type="radio" onclick="document.location.href.inversement()"  class="btn" value="trier par ascendant" name="tri" value="ascendant" checked="">
 		<label for="tri_asc">Ascendant</label>
 
 	<li>	
@@ -94,5 +105,7 @@
 {% endfor %}
 
 <a href="{{ url_for('recherche') }}"> Recommencer</a>
+
+
 
 {% endblock %}
