--- a/SQL/projet/templates/base.html
+++ b/SQL/projet/templates/base.html
@@ -11,7 +11,8 @@
 	
 	<body>
 		{% block content %}{% endblock %}
-		<script type="text/javascript" src="script.js"></script>
-		
+
+		<script src="{{ url_for('static', filename='script.js') }}"></script>
+
 	</body>
 </html>
