--- a/SQL/projet/templates/piece.html
+++ b/SQL/projet/templates/piece.html
@@ -12,8 +12,8 @@
 <p>
 	<ul>
 		<li>Nom: {{result[1]}}</li>
-		<li>Nombre que je possède: {{result[2]}}</li>
-		<li>De type: {{result[4]}}</li>
+		<li>Nombre d'exemplaire: {{result[2]}}</li>
+		<li>Type: {{result[4]}}</li>
 		<li>Pays émetteur: {{result[3]}}</li>
 		<li>Date de création: {{result[5]}}</li>
 		<li>Devise monétaire: {{result[6]}}</li>
@@ -22,7 +22,7 @@
 		<li>Son épaisseur (en mm): {{result[10]}}</li>
 		<li>Sa forme: {{result[11]}}</li>
 		<li>Sa dimension (en mm): {{result[9]}}</li>
-		<li>Démonétisation: {{result[12]}}</li>
+		<li>Démonétisée: {{result[12]}}</li>
 		<li>Indice de rareté numista: {{result[13]}}</li>
 	</ul>
 <img class="piece" src="{{result[14]}}">
