--- a/SQL/projet/templates/tri_dimension_D.html
+++ b/SQL/projet/templates/tri_dimension_D.html
@@ -1,4 +1,4 @@
-{# app/templates/tri_dimension.html #}
+{# app/templates/tri_dimension_D.html #}
 
 {% extends 'base.html' %}
 
@@ -15,6 +15,6 @@
 </a>
 {% endfor %}
 
-<a href="{{ url_for('pieceotheque') }}"> Retour</a>
+<a href="{{ url_for('pieceotheque_D') }}"> Retour</a>
 
 {% endblock %}
