--- a/SQL/projet/templates/pieceotheque_D.html
+++ b/SQL/projet/templates/pieceotheque_D.html
@@ -14,73 +14,73 @@
 
 
 	<li>	
-		<form action="{{ url_for('tri_nombre_D') }}" method="post">
+		<form action="{{ url_for('tri') }}" method="post">
 			<input type="submit" value="trier par nombre" name="tri_nb_D">
 		</form>
 	</li>
 	
 	<li>	
-		<form action="{{ url_for('tri_emetteur_D') }}" method="post">
+		<form action="{{ url_for('tri') }}" method="post">
 			<input type="submit" value="trier par émetteur" name="tri_emet_D">
 		</form>
 	</li>
 	
 	<li>	
-		<form action="{{ url_for('tri_type_D') }}" method="post">
+		<form action="{{ url_for('tri') }}" method="post">
 			<input type="submit" value="trier par type" name="tri_typ_D">
 		</form>
 	</li>
 	
 	<li>	
-		<form action="{{ url_for('tri_date_D') }}" method="post">
+		<form action="{{ url_for('tri') }}" method="post">
 			<input type="submit" value="trier par date" name="tri_date_D">
 		</form>
 	</li>
 	
 	<li>	
-		<form action="{{ url_for('tri_devise_D') }}" method="post">
+		<form action="{{ url_for('tri') }}" method="post">
 			<input type="submit" value="trier par devise monétaire" name="tri_dev_D">
 		</form>
 	</li>
 	
 	<li>	
-		<form action="{{ url_for('tri_composition_D') }}" method="post">
+		<form action="{{ url_for('tri') }}" method="post">
 			<input type="submit" value="trier par composition" name="tri_comp_D">
 		</form>
 	</li>
 	
 	<li>	
-		<form action="{{ url_for('tri_poids_D') }}" method="post">
+		<form action="{{ url_for('tri') }}" method="post">
 			<input type="submit" value="trier par poids" name="tri_pds_D">
 		</form>
 	</li>
 	
 	<li>	
-		<form action="{{ url_for('tri_dimension_D') }}" method="post">
+		<form action="{{ url_for('tri') }}" method="post">
 			<input type="submit" value="trier par dimension" name="tri_dim_D">
 		</form>
 	</li>
 	
 	<li>	
-		<form action="{{ url_for('tri_epaisseur_D') }}" method="post">
+		<form action="{{ url_for('tri') }}" method="post">
 			<input type="submit" value="trier par épaisseur" name="tri_ep_D">
 		</form>
 	</li>
 	
 	<li>	
-		<form action="{{ url_for('tri_forme_D') }}" method="post">
+		<form action="{{ url_for('tri') }}" method="post">
 			<input type="submit" value="trier par forme" name="tri_forme_D">
 		</form>
 	</li>
 	
 	<li>	
-		<form action="{{ url_for('tri_demonetise_D') }}" method="post">
+		<form action="{{ url_for('tri') }}" method="post">
 			<input type="submit" value="trier par démonétisation" name="tri_demo_D">
 		</form>
 	</li>
 	
 	<li>	
-		<form action="{{ url_for('tri_idr_D') }}" method="post">
+		<form action="{{ url_for('tri') }}" method="post">
 			<input type="submit" value="trier par indice de rareté Numista" name="tri_idr_D">
 		</form>
 	</li>
