--- a/SQL/projet/templates/tri_poids.html
+++ b/SQL/projet/templates/tri_poids.html
@@ -8,7 +8,7 @@
 
 
 {% for result in repetition %}
-<p> {{result[8]}} </p>
+<p> {{result[8]}}g </p>
 <a href="{{ url_for('piece', idP=result[0]) }}">
 	<img class="piece" src="{{result[14]}}" title="{{result[6]}}">
 	<img class="piece" src="{{result[15]}}" title="{{result[6]}}">
