--- a/SQL/projet/templates/pieceotheque.html
+++ b/SQL/projet/templates/pieceotheque.html
@@ -7,15 +7,15 @@
 {% block content %}
 
 
-	<input type="radio" onclick="inversement()" id="desc" value="trier par descendant" name="tri" value="descendant"  />
+	<input type="radio" id="desc" name="tri" value="descendant" checked />
 		<label for="desc">Descendant</label>
-	<input type="radio" id="asc" value="trier par ascendant" name="tri" value="ascendant" checked="" />
+	<input type="radio" id="asc" name="tri" value="ascendant" checked="" />
 		<label for="asc">Ascendant</label>
 		
 
 	<li>	
 		<form action="{{ url_for('tri') }}" method="post">
-			<input type="submit" value="trier par nombre" name="tri_nb" />
+			<input type="submit" value="trier par nombre" name="nb_ex" />
 		</form>
 	</li>
 	
