--- a/SQL/projet/templates/tri.html
+++ b/SQL/projet/templates/tri.html
@@ -1,20 +1,19 @@
-{# app/templates/tri_demonetise_D.html #}
+{# app/templates/tri.html #}
 
 {% extends 'base.html' %}
 
-{% block title %}trié par démonétisation{% endblock %}
+{% block title %}tri{% endblock %}
 
 {% block content %}
 
 {% for result in repetition %}
-
-<p> {{result[12]}} </p>
+<p> {{result[nb_ex]}}</p>
 <a href="{{ url_for('piece', idP=result[0]) }}">
 	<img class="piece" src="{{result[14]}}" title="{{result[6]}}">
 	<img class="piece" src="{{result[15]}}" title="{{result[6]}}">
 </a>
 {% endfor %}
 
-<a href="{{ url_for('pieceotheque_D') }}"> Retour</a>
+<a href="{{ url_for('pieceotheque') }}"> Retour</a>
 
 {% endblock %}
