--- a/SQL/projet/templates/pieceotheque.html
+++ b/SQL/projet/templates/pieceotheque.html
@@ -7,7 +7,7 @@
 {% block content %}
 
 
-	<input type="radio" id="desc" name="tri" value="descendant" checked />
+	<input type="radio" id="desc" name="tri" value="descendant" checked onclick="inversement()" />
 		<label for="desc">Descendant</label>
 	<input type="radio" id="asc" name="tri" value="ascendant" checked="" />
 		<label for="asc">Ascendant</label>
