ja presque fini

--- a/SQL/projet/templates/piece.html
+++ b/SQL/projet/templates/piece.html
@@ -18,10 +18,10 @@
 		<li>Date de création: {{result[5]}}</li>
 		<li>Devise monétaire: {{result[6]}}</li>
 		<li>Composition: {{result[7]}}</li>
-		<li>Son poids (en gramme): {{result[8]}}</li>
-		<li>Son épaisseur (en mm): {{result[10]}}</li>
-		<li>Sa forme: {{result[11]}}</li>
-		<li>Sa dimension (en mm): {{result[9]}}</li>
+		<li>Poids (en gramme): {{result[8]}}</li>
+		<li>Épaisseur (en mm): {{result[10]}}</li>
+		<li>Forme: {{result[11]}}</li>
+		<li>Dimension (en mm): {{result[9]}}</li>
 		<li>Démonétisée: {{result[12]}}</li>
 		<li>Indice de rareté numista: {{result[13]}}</li>
 	</ul>
