--- a/SQL/projet/templates/recherche.html
+++ b/SQL/projet/templates/recherche.html
@@ -16,15 +16,15 @@
 <ul>	
 	<li>
 		<label for="nb_ex">Nombre d'exemplaire:</label>
-		<input type="number" id="pc" name = "nb_ex" min="1" max="100" />
+		<input type="number"  name = "nb_ex" min="1" max="100" />
 	</li>
 	<li>
 		<label for="emet">Emetteur:</label>
-		<input type="text" id="pc" name="emet" />
+		<input type="text"  name="emet" />
 	</li>
 	<li>
 		<label for="type">Type:</label>
-		<select name="typ" id="pc">
+		<select name="typ" >
 				<option > </option> <!-- option vide pour quand la personne ne sais pas-->
 				<option value="Pièce courante"> Pièce courante</option>
                 <option value="Essaie"> Essaie</option>
@@ -33,31 +33,31 @@
 	</li>
 	<li>
 		<label for="date">Date:</label>
-		<input type="number" id="pc" name="date"/>
+		<input type="number"  name="date" value="0"/>
 	</li>
 	<li>
 		<label for="dev">Devise:</label>
-		<input type="text" id="pc" name="dev" />
+		<input type="text"  name="dev" />
 	</li>
 	<li>
 		<label for="comp">Composition:</label>
-		<input type="text" id="pc" name="comp" />
+		<input type="text"  name="comp" />
 	</li>
 	<li>
 		<label for="pds">Poids (g):</label>
-		<input type="number" id="pc" name="pds" step="0.01" min="0" max="100"/>
+		<input type="number"  name="pds" step="0.01" min="0" max="100"/>
 	</li>
 	<li>
 		<label for="dim">Dimension (mm) :</label>
-		<input type="number" id="pc" name="dim" step="0.01" min="0" max="100"/>
+		<input type="number"  name="dim" step="0.01" min="0" max="100"/>
 	</li>
 	<li>
 		<label for="ep">Épaisseur (mm):</label>
-		<input type="number" id="pc" name="ep" step="0.01" min="0" max="100" />
+		<input type="number"  name="ep" step="0.01" min="0" max="100" />
 	</li>
 	<li>
 		<label for="forme">Forme:</label>
-		<input type="text" id="pc" name="forme" />
+		<input type="text"  name="forme" />
 	</li>
 	<li>
 		<label for="demo">Démonétisée:</label>
@@ -70,7 +70,7 @@
 	</li>
 	<li>
 		<label for="idr">Indice de rareté:</label>
-		<input type="number" id="pc" name="idr" min="0" max="100" />
+		<input type="number"  name="idr" min="0" max="100" />
 	</li>
 	
 	<input type="submit" value="Aller à la page">
