--- a/SQL/projet/templates/pieceotheque.html
+++ b/SQL/projet/templates/pieceotheque.html
@@ -7,9 +7,9 @@
 {% block content %}
 
 
-	<input type="submit" id="desc" name="tri" value="descendant" checked onclick="inversement()" />
+	<input type="submit" id="desc" name="tri" value="descendant" checked onclick="inversement1()" />
 
-	<input type="submit" id="asc" name="tri" value="ascendant" checked="" />
+	<input type="submit" id="asc" name="tri" value="ascendant" checked=""  onclick="inversement2()"/>
 
 <div id="id_div">
 
